--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.Title}}</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h1 style="text-align: center;">This is the Mighty HomePage</h1>
+    <br>
+    <br>
+    <ul style="max-width: 600px; margin-left: auto;margin-right: auto;">
+        <li><a href="/list/">Go to list view [DB Operations]</a></li>
+        <li><a href="/view/">Go to dynamic view [GET Parameters Handling]</a></li>
+        <li><a href="/read-file/">Go to read-file view [File IO Operations]</a></li>
+    </ul>
 </body>
 </html>
