--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,8 @@
     <br>
     <br>
     <ul style="max-width: 600px; margin-left: auto;margin-right: auto;">
-        <li><a href="/list/">Go to list view [DB Operations]</a></li>
-        <li><a href="/view/">Go to dynamic view [GET Parameters Handling]</a></li>
+        <li><a href="/elements/">Go to "Elements" view [DB Operations]</a></li>
+        <li><a href="/get-params/?title=Try_changing_the_title&body=Title_and_body_for_this_page_come_from_the_get_parameters._Try_changing_them.">Go to "Get Params" view [GET Parameters Handling]</a></li>
         <li><a href="/read-file/">Go to read-file view [File IO Operations]</a></li>
     </ul>
 </body>
